en/bg/pt locales update

--- a/src/res/locales/app.bg-BG.po
+++ b/src/res/locales/app.bg-BG.po
@@ -1,58 +1,58 @@
 #: Close
 msgid "close"
-msgstr "Close"
+msgstr "Затвори"
 
 #: Connect
 msgid "connect"
-msgstr "Connect"
+msgstr "свързване"
 
 #: Connecting...
 msgid "connecting"
-msgstr "Connecting..."
+msgstr "свързва се"
 
 #: Connected
 msgid "connected"
-msgstr "Connected"
+msgstr "свързан"
 
 #: Settings
 msgid "settings"
-msgstr "Settings"
+msgstr "настройки"
 
 #: Banned
 msgid "banned"
-msgstr "Banned Users"
+msgstr "баннат"
 
 #: Notifications
 msgid "notifications"
-msgstr "Notifications"
+msgstr "известия"
 
 #: Username
 msgid "username"
-msgstr "Username"
+msgstr "потребителско име"
 
 #: Password
 msgid "password"
-msgstr "Password"
+msgstr "Парола"
 
 #: I have a password
 msgid "password_have"
-msgstr "I have a password"
+msgstr "Имам парола"
 
 #: Server
 msgid "server"
-msgstr "Server"
+msgstr "Сървър"
 
 #: Nick (Nickname)
 msgid "nick"
-msgstr "Nick"
+msgstr "Псевдоним"
 
 #: Channel
 msgid "channel"
-msgstr "Channel"
+msgstr "Канал"
 
 #: Network
 msgid "network"
-msgstr "Network"
+msgstr "IRC Мрежа"
 
 #: ZNC
 msgid "znc"
@@ -60,398 +60,398 @@ msgstr "ZNC"
 
 #: Realname field in a users whois
 msgid "whois_realname"
-msgstr "Real name"
+msgstr "Поле за истинско име на потребителя при whois"
 
 #: Away status in a users whois
 msgid "whois_status"
-msgstr "Status"
+msgstr "Статус"
 
 #: Away status in a users whois
 msgid "whois_status_available"
-msgstr "Is available"
+msgstr "Статус"
 
 #: Send user a message button
 msgid "send_a_message"
-msgstr "Send a message"
+msgstr "Изпрати съобщение"
 
 #: Show more information
 msgid "more_information"
-msgstr "More information"
+msgstr "Повече инфо"
 
 #: Ignore user toggle box
 msgid "ignore_user"
-msgstr "Ignore user"
+msgstr "Добави в игнора"
 
 #: Channel input box
 msgid "connection_channel"
-msgstr "Channel"
+msgstr "Автоматично влизане в канали."
 
 #: General Title
 msgid "settings_general"
-msgstr "General"
+msgstr "Главни настройки"
 
 #: Theme Title
 msgid "settings_theme"
-msgstr "Theme"
+msgstr "Настройки на визията"
 
 #: Theme URL
 msgid "settings_themeurl"
-msgstr "Theme URL"
+msgstr "Адрес на визията"
 
 #: Show autocomplete list
 msgid "settings_show_autocomplete"
-msgstr "Show autocomplete list"
+msgstr "Показване на кутийката с подсказките"
 
 #: Messages Title
 msgid "settings_messages_title"
-msgstr "Chat Messages"
+msgstr "Наименование на съобщението"
 
 #: Show timestamps
 msgid "settings_timestamps"
-msgstr "Show timestamps"
+msgstr "Време към съобщенията"
 
 #: Use 24-hour timestamps
 msgid "settings_24hour_timestamps"
-msgstr "Use 24-hour timestamps"
+msgstr "Времето да е в 24-часов формат"
 
 #: Show emoticons
 msgid "settings_emoticons"
-msgstr "Show emoticons"
+msgstr "Настройки на емотИкони"
 
 #: Block new Private messages
 msgid "settings_block_private"
-msgstr "Block new private messages"
+msgstr "Занбраняване на лични съобщения"
 
 #: Messages in scrollback
 msgid "setings_scrollback"
-msgstr "Messages in scrollback"
+msgstr "съобщения в историята"
 
 #: Extra formatting
 msgid "settings_formatting"
-msgstr "Extra formatting"
+msgstr "Допълнително форматиране"
 
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
-msgstr "Include join/part messages as activity"
+msgstr "Известия за влизане/излизане от канал"
 
 #: Mute sound notifications
 msgid "settings_mute_sound"
-msgstr "Mute sound notifications"
+msgstr "Заглушаване на звуковите известия"
 
 #: Highlight on words
 msgid "settings_highlight"
-msgstr "Highlight on words (space seperated)"
+msgstr "Персонализирано осветяване (разделяйте с интервал)"
 
 #: Aliases Title
 msgid "settings_aliases"
-msgstr "Aliases"
+msgstr "Алиасес"
 
 #: Send Message
 msgid "send_message"
-msgstr "Send Message"
+msgstr "Изпрати съобщение"
 
 #: Notify me when
 msgid "settings_notify"
-msgstr "Notify me when"
+msgstr "Кога да ме известява"
 
 #: All messages
 msgid "settings_notify_all"
-msgstr "All messages"
+msgstr "При всяко съобщение"
 
 #: I am mentioned
 msgid "settings_notify_mentioned"
-msgstr "I am mentioned"
+msgstr "Само когато ме споменат"
 
 #: Never
 msgid "settings_notify_never"
-msgstr "Never"
+msgstr "Да не ме известява"
 
 #: Mute sounds
 msgid "settings_notify_mute"
-msgstr "Mute sounds"
+msgstr "Забрани всички звукови известия"
 
 #: Refresh banlist
 msgid "bans_refresh"
-msgstr "Refresh banlist"
+msgstr "Опресняване на Бан лист-а"
 
 #: Banned user
 msgid "bans_user"
-msgstr "Banned user"
+msgstr "Списък с банове"
 
 #: Banned by
 msgid "bans_by"
-msgstr "Banned by"
+msgstr "Наложен от "
 
 #: Refreshing banlist
 msgid "bans_refreshing"
-msgstr "Refreshing banlist..."
+msgstr "Опресняване на Бан лист-а"
 
 #: Nobody is banned
 msgid "bans_nobody"
-msgstr "Nobody is banned!"
+msgstr "Все още няма баннати потребители"
 
 #: Topic
 msgid "channel_topic"
-msgstr "Topic"
+msgstr "Темата на деня е"
 
 #: Moderated chat
 msgid "channel_moderated"
-msgstr "Moderated chat"
+msgstr "Заключване на канала за съобщения."
 
 #: Invite Only
 msgid "channel_invite"
-msgstr "Invite only"
+msgstr "Само с покана"
 
 #: Moderated topic
 msgid "channel_moderated_topic"
-msgstr "Only moderators can change the topic"
+msgstr "Забрана за смяна на Topic"
 
 #: Block external messages
 msgid "channel_external"
-msgstr "Block messages from outside this channel"
+msgstr "Блокиране на външни съобщения"
 
 #: Welcome to Kiwi IRC!
 msgid "container_welcome"
-msgstr "Welcome to Kiwi IRC! Select a channel on the left."
+msgstr "Добре дошли в "
 
 #: Show statebrowser
 msgid "container_statebrowser"
-msgstr "Show statebrowser"
+msgstr "Покажи statebrowser"
 
 #: Join Channel
 msgid "container_join"
-msgstr "Join Channel"
+msgstr "Влез в #канал"
 
 #: Not connected
 msgid "container_notconnected"
-msgstr "Not Connected"
+msgstr "Не сте свързан"
 
 #: Private conversation with
 msgid "container_privmsg"
-msgstr "Private conversation with {{user}}"
+msgstr "Лични съобщения с "
 
 #: input wrap placeholder
 msgid "input_placeholder"
-msgstr "Send a message..."
+msgstr "Вмъкнете контейнера за.."
 
 #: Loading
 msgid "media_loading"
-msgstr "Loading {{url}}..."
+msgstr "Зареждане.."
 
 #: Load previous
 msgid "messages_load"
-msgstr "Load previous messages"
+msgstr "Зареждане на предишни"
 
 #: NetworkSettings $t('settings_')
 msgid "settings_server_details"
-msgstr "Server details"
+msgstr "Мрежови настройки"
 
 #: Port
 msgid "settings_port"
-msgstr "Port"
+msgstr "Порт"
 
 #: Other networks on this ZNC account
 msgid "settings_znc_other"
-msgstr "Other networks on this ZNC account will be listed in the network list"
+msgstr "Други мрежи за този ZNC акаунт"
 
 #: Your details
 msgid "settings_your_details"
-msgstr "Your details"
+msgstr "Лична информация"
 
 #: Nickname
 msgid "settings_nickname"
-msgstr "Nickname"
+msgstr "Прякор"
 
 #: Advanced
 msgid "settings_advanced"
-msgstr "Advanced"
+msgstr "Други настройки"
 
 #: Encoding
 msgid "settings_encoding"
-msgstr "Encoding"
+msgstr "Енкодинг"
 
 #: Show Raw
 msgid "settings_show_raw"
-msgstr "Show Raw"
+msgstr "Показване на raw "
 
 #: Run commands when connected
 msgid "settings_autorun"
-msgstr "Run commands when connected"
+msgstr "Изпълняване на команда при свързване"
 
 #: Danger zone
 msgid "settings_danger"
-msgstr "Danger Zone"
+msgstr "Опасна зона"
 
 #: Remove network
 msgid "settings_remove"
-msgstr "Remove network"
+msgstr "Премахни тази мрежа"
 
 #: Person key
 msgid "person"
-msgstr "{{count}} person here"
+msgstr "Личен ключ"
 
 #: Person plural key
 msgid "person_plural"
-msgstr "{{count}} people here"
+msgstr "Личен ключ"
 
 #: Reconnect Channel
 msgid "reconnect_channel"
-msgstr "Reconnect to join {{channel}}"
+msgstr "Влез отново в #канал"
 
 #: Reconnect to network
 msgid "reconnect_network"
-msgstr "Reconnect to {{network}} to start talking"
+msgstr "Влез отново в мрежата"
 
 #: Reconnect to query
 msgid "reconnect_query"
-msgstr "Reconnect to continue talking with {{user}}"
+msgstr "Свържете се отново към заявката"
 
 #: Connection settings
 msgid "reconnect_settings"
-msgstr "Connection settings"
+msgstr "Настройки за свързване"
 
 #: Close options $t('side_')
 msgid "side_close"
-msgstr "Close options"
+msgstr "Затвори настройките"
 
 #: Channel options
 msgid "side_options"
-msgstr "Channel options"
+msgstr "Опции на #канала"
 
 #: Your settings
 msgid "side_settings"
-msgstr "Your settings"
+msgstr "Твойте настройки"
 
 #: Show when people join
 msgid "side_joins"
-msgstr "Show when people join"
+msgstr "Показва когато потребители влязат в канал"
 
 #: Extra message formatting
 msgid "side_formatting"
-msgstr "Extra message formatting"
+msgstr "Допълнтите настройки за съобщения"
 
 #: Nick colours in the list"
 msgid "side_colours"
-msgstr "Nick colours in the list"
+msgstr "Цветни  никове в списъка с портребители"
 
 #: No buffer set
 msgid "side_buffer"
-msgstr "No buffer set"
+msgstr "Няма зададен буфер"
 
 #: Error starting
 msgid "error_starting"
-msgstr "There was an error starting Kiwi IRC :("
+msgstr "Грешка при стартирането"
 
 msgid "error_installed"
-msgstr "Make sure you have installed Kiwi IRC correctly and the configurartion can be loaded"
+msgstr "Този текст няма информация за контекста. Текстът се използва в application.po. Позиция в файл на ред: 87"
 
 #: Leave
 msgid "state_leave"
-msgstr "Leave {{name}}"
+msgstr "Напускам"
 
 #: Your account
 msgid "state_account"
-msgstr "Your account"
+msgstr "Твоят Акаунт"
 
 #: Your settings and networks will be remembered on this computer
 msgid "state_remembered"
-msgstr "Your settings and networks will be remembered on this computer."
+msgstr "Вашите настройки и мрежи ще бъдат запомнени на този компютър"
 
 #: Forget me
 msgid "state_forget"
-msgstr "Forget me"
+msgstr "Забрани"
 
 #: No networks here yet.
 msgid "state_network"
-msgstr "No networks here yet."
+msgstr "IRC Мрежа"
 
 #: Add one?
 msgid "state_add"
-msgstr "Add one?"
+msgstr "Добави"
 
 #: Available networks
 msgid "state_available"
-msgstr "Available networks"
+msgstr "Достъпен"
 
 #: Configure network
 msgid "state_configure"
-msgstr "Configure network"
+msgstr "Настройване на IRC мрежа"
 
 #: Not connected.
 msgid "state_disconnected"
-msgstr "Not connected."
+msgstr "Не сте свързан"
 
 #: Join new #channel
 msgid "state_join"
-msgstr "Join new #channel"
+msgstr "Влез в нов #канал"
 
 #: Account name
 msgid "user_account"
-msgstr "Account name: {{user}}"
+msgstr "Потребителско име"
 
 #: Real name
 msgid "user_realname"
-msgstr "Real name: {{realname}}"
+msgstr "Истинско име"
 
 #: Is a bot
 msgid "user_bot"
-msgstr "Is a bot"
+msgstr "Е бот"
 
 #: Is available for help
 msgid "user_help"
-msgstr "Is avaiable for help"
+msgstr "Е на линия за да ви помогне"
 
 #: Is an operator
 msgid "user_op"
-msgstr "Is an operator"
+msgstr "IRC оператор"
 
 #: Connected to
 msgid "user_server"
-msgstr "Connected to {{server}} {{info}}"
+msgstr "Свързан към сървър"
 
 #: Securely connected via SSL/TLS
 msgid "user_secure"
-msgstr "Securely connected via SSL/TLS"
+msgstr "Използва защитена връзка SSL/TLS"
 
 #: Also in channels
 msgid "user_channels"
-msgstr "Also in channels {{channels}}"
+msgstr "Канали "
 
 #: Access level
 msgid "user_access"
-msgstr "Access level"
+msgstr "Ниво на достъп"
 
 #: Normal
 msgid "user_normal"
-msgstr "Normal"
+msgstr "Нормален Потребител"
 
 #: Kick from channel
 msgid "user_kick"
-msgstr "Kick from the channel"
+msgstr "Ритни от канала"
 
 #: Ban from the channel
 msgid "user_ban"
-msgstr "Ban from the channel"
+msgstr "Бан от канал"
 
 #: Your IRC client
 msgid "personal_client"
-msgstr "Your IRC Client."
+msgstr "Твоят IRC клиент"
 
 #: Add your networks. Join your channels.
 msgid "personal_addjoin"
-msgstr "Add your networks. Join your channels."
+msgstr "Добави твоя мрежа.Влез в твой канал."
 
 #: They will be here when you come back.
 msgid "personal_return"
-msgstr "They will be here when you come back."
+msgstr "Те ще бъдат тук, когато се върнете."
 
 #: Add a Network
 msgid "personal_add"
-msgstr "Add a Network"
+msgstr "Добави IRC мрежа"
 
 #: Saved networks
 msgid "personal_saved"
-msgstr "Saved networks"
+msgstr "Запази IRC мрежа"
 
 #: Kiwi IRC (next gen) - Rizon preview
 msgid "rizon_title"
@@ -463,7 +463,7 @@ msgstr "Direct websockets. No Kiwi server or webirc involved."
 
 #: (Thanks to Adam @Rizon for the development websocket server support!)
 msgid "rizon_thanks"
-msgstr "(Thanks to Adam @Rizon for the development websocket server support!)"
+msgstr " (Thanks to Adam @Rizon for the development websocket server support!)"
 
 #: Give the developer version of Kiwi IRC a try!
 msgid "rizon_dev"
