--- a/src/res/locales/app.bg-BG.po
+++ b/src/res/locales/app.bg-BG.po
@@ -123,7 +123,7 @@ msgid "settings_block_private"
 msgstr "Занбраняване на лични съобщения"
 
 #: Messages in scrollback
-msgid "setings_scrollback"
+msgid "settings_scrollback"
 msgstr "съобщения в историята"
 
 #: Extra formatting
