--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -131,7 +131,7 @@ msgid "settings_block_private"
 msgstr "Block new private messages"
 
 #: Messages in scrollback
-msgid "setings_scrollback"
+msgid "settings_scrollback"
 msgstr "Messages in scrollback"
 
 #: Extra formatting
