--- a/src/res/locales/app.pt-PT.po
+++ b/src/res/locales/app.pt-PT.po
@@ -123,7 +123,7 @@ msgid "settings_block_private"
 msgstr "Bloquear novas mensagens privadas"
 
 #: Messages in scrollback
-msgid "setings_scrollback"
+msgid "settings_scrollback"
 msgstr "Mensagens anteriores"
 
 #: Extra formatting
